# neutron-lib

./: .testr.conf  CONTRIBUTING.rst  MANIFEST.in  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
neutron_lib/: context.py  policy.py
neutron_lib/api/v2/: attributes.py
neutron_lib/callbacks/: exceptions.py  manager.py  registry.py
neutron_lib/common/: config.py  rpc.py  utils.py
neutron_lib/db/: api.py  common_db_mixin.py  sqlalchemyutils.py
neutron_lib/tests/: base.py  tools.py
neutron_lib/tests/unit/api/v2/: test_attributes.py
