[metadata]
name = neutron-lib
version = 8.0.0
summary = OpenStack Networking Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    neutron_lib
# data_files =
#     etc/neutron =
#         etc/neutron_vpnaas.conf
#         etc/vpn_agent.ini
#     etc/neutron/rootwrap.d =
#         etc/neutron/rootwrap.d/vpnaas.filters

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
# console_scripts =
# device_drivers =
# neutron.db.alembic_migrations =

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron-lib/locale/neutron.pot

[compile_catalog]
directory = neutron-lib/locale
domain = neutron-lib

[update_catalog]
domain = neutron-lib
output_dir = neutron-lib/locale
input_file = neutron-lib/locale/neutron-lib.pot

[wheel]
universal = 1
